--- a/src/admin-statics.html
+++ b/src/admin-statics.html
@@ -85,7 +85,7 @@ title: Статистика
                         <img class="admin-head__roles_item" src="assets/images/admin/trof-6.svg" alt="">
                     </div>
                     <div class="admin-head__allroles">
-                        <button class="btn-admin">Все трофеи</button>
+                        <a href="admin-trofei.html" class="btn-admin">Все трофеи</a>
                     </div>
                 </div>
                 <div class="admin-head__info">
