--- a/src/mobile-games.html
+++ b/src/mobile-games.html
@@ -21,11 +21,13 @@ title: Мобильные игры
                                 <div class="timer__info">
                                     <div class="timer__day"></div>
                                     <div class="timer__divide">
-                                        <img src="assets/images/icons/timer-divide.svg" alt="">
+                                        <span class="timer__divide_dot"></span>
+                                        <span class="timer__divide_dot"></span>
                                     </div>
                                     <div class="timer__hours"></div>
                                     <div class="timer__divide">
-                                        <img src="assets/images/icons/timer-divide.svg" alt="">
+                                        <span class="timer__divide_dot"></span>
+                                        <span class="timer__divide_dot"></span>
                                     </div>
                                     <div class="timer__minutes"></div>
                                 </div>
