--- a/src/mobile-game-buy.html
+++ b/src/mobile-game-buy.html
@@ -85,92 +85,72 @@ title: Пополнение стим
         </div>
     </section>
 
-    <section class="mobile-game-"></section>
-
-    <section class="steam-login">
+    <section class="mobile-game-form">
         <div class="container">
-            <form class="steam-login__block">
-                <div class="steam-login__form">
-                    <div class="steam-login__form_group">
-                        <input class="steam-login__form_input" placeholder="Введите свой ID">
-                        <button class="steam-login__form_btn">Не могуй найти ID</button>
+            <form class="mobile-game-form__block">
+                <div class="mobile-game-form__form">
+
+                    <div class="mobile-game-form__header">
+                        <img class="mobile-game-form__header_bg" src="assets/images/mobile-game/form-bg.png" class="mobile-game-form__header_bg" alt="">
+                        <div class="mobile-game-form__header_content">
+                            <img class="mobile-game-form__header_logo" src="assets/images/mobile-game/form-logo.png" alt="">
+                            <div class="mobile-game-form__header_title">Пополнить счет в PUBG: Mobile</div>
+                            <img class="mobile-game-form__header_unit" src="assets/images/mobile-game/form-unit.png" alt="">
+                        </div>
                     </div>
-                    <div class="steam-login__form_group">
-                        <input class="steam-login__form_input" placeholder="Zone ID">
-                        <button class="steam-login__form_btn">Не могуй найти Zone ID</button>
-                    </div>
-                    <div class="steam-login__form_group">
-                        <svg class="steam-login__form_svg" xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
-                            <g clip-path="url(#clip0_2449_3069)">
-                                <path d="M11 1.23828C5.06726 1.23828 0.257812 6.04773 0.257812 11.9805C0.257812 17.9132 5.06726 22.7227 11 22.7227C16.9327 22.7227 21.7422 17.9132 21.7422 11.9805C21.7422 6.04773 16.9327 1.23828 11 1.23828ZM14.6649 13.1464L11.033 15.7713C10.9012 17.1897 9.68804 18.2998 8.22662 18.2998C7.58464 18.3003 6.96162 18.0822 6.46005 17.6815C5.95847 17.2808 5.60819 16.7213 5.46683 16.0951L3.55592 15.3358V11.8051L6.78477 13.0963C7.28866 12.7955 7.85469 12.6608 8.51353 12.7186L10.8702 9.37295C10.8857 7.32236 12.5796 5.6611 14.6572 5.6611C16.7464 5.6611 18.4403 7.34165 18.4441 9.39994C18.4441 11.4734 16.7463 13.1464 14.6649 13.1464Z" fill="#847F7D" />
-                                <path d="M8.22593 13.4375C8.07464 13.437 7.92378 13.4538 7.7763 13.4876L8.64071 13.8345C8.84131 13.9125 9.02442 14.0296 9.17942 14.179C9.33443 14.3283 9.45825 14.5069 9.5437 14.7045C9.62915 14.9021 9.67453 15.1146 9.67722 15.3298C9.6799 15.5451 9.63983 15.7587 9.55934 15.9583C9.47776 16.1592 9.35735 16.342 9.20502 16.4963C9.05269 16.6506 8.87142 16.7733 8.67159 16.8575C8.47176 16.9416 8.2573 16.9855 8.04049 16.9866C7.82367 16.9878 7.60876 16.9461 7.40806 16.8641C7.07084 16.733 6.72589 16.5904 6.38867 16.4632C6.55781 16.7903 6.81099 17.0664 7.1222 17.2632C7.4334 17.46 7.79139 17.5704 8.15938 17.5829C8.52737 17.5955 8.89207 17.5099 9.216 17.3349C9.53993 17.1598 9.8114 16.9017 10.0025 16.5869C10.1936 16.2722 10.2975 15.9123 10.3034 15.5441C10.3093 15.176 10.217 14.8129 10.0361 14.4922C9.85523 14.1715 9.59219 13.9047 9.27404 13.7194C8.9559 13.534 8.59413 13.4367 8.22593 13.4375Z" fill="#847F7D" />
-                                <path d="M14.6619 6.89453C13.2548 6.89453 12.1191 8.02005 12.1191 9.40391C12.1191 10.7954 13.2587 11.9133 14.6619 11.9133C16.0534 11.9171 17.197 10.7955 17.193 9.40391C17.193 8.02005 16.0534 6.89453 14.6619 6.89453ZM14.6561 10.9108C14.3587 10.9076 14.0689 10.8165 13.8232 10.649C13.5775 10.4815 13.3868 10.245 13.2752 9.96933C13.1636 9.69368 13.1361 9.39117 13.196 9.09989C13.256 8.80861 13.4008 8.54158 13.6122 8.33243C13.8236 8.12327 14.0922 7.98133 14.3841 7.92448C14.676 7.86764 14.9782 7.89842 15.2526 8.01296C15.5271 8.1275 15.7615 8.32067 15.9264 8.56816C16.0913 8.81565 16.1793 9.10639 16.1793 9.40378C16.1785 9.60284 16.1385 9.7998 16.0615 9.98337C15.9845 10.1669 15.8721 10.3335 15.7305 10.4735C15.589 10.6135 15.4213 10.7242 15.2369 10.7992C15.0525 10.8743 14.8552 10.9122 14.6561 10.9108H14.6561Z" fill="#847F7D" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_2449_3069">
-                                    <rect width="22" height="22" fill="white" transform="translate(0 0.980469)" />
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <input class="steam-login__form_input" placeholder="Введите сумму пополнения">
-                    </div>
-                    <div class="steam-login__form_subtitle">Или выберите номинал</div>
-                    <div class="steam-login__form_select">
 
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="100" id="">
-                            <span>100</span>
-                        </label>
+                    <div class="mobile-game-form__inputs">
+                        <div class="form-group">
+                            <input class="form-input" placeholder="Введите свой ID">
+                            <button class="form-input__btn">Не могуй найти ID</button>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-input" placeholder="Zone ID">
+                            <button class="form-input__btn">Не могуй найти Zone ID</button>
+                        </div>
+                        <div class="mobile-game-form__selects">
+                            <div class="form-select">
+                                <input type="text" class="form-input" placeholder="Выберите регион" required>
+                                <div class="form-select__options">
+                                    <div class="form-select__option">Server 1</div>
+                                    <div class="form-select__option">Server 2</div>
+                                    <div class="form-select__option">Server 3</div>
+                                    <div class="form-select__option">Server 4</div>
+                                    <div class="form-select__option">Server 5</div>
+                                    <div class="form-select__option">Server 6</div>
+                                </div>
+                            </div>
+                            <div class="form-select">
+                                <input type="text" class="form-input" placeholder="Выберите Сервер">
+                                <div class="form-select__options">
+                                    <div class="form-select__option">Server 1</div>
+                                    <div class="form-select__option">Server 2</div>
+                                    <div class="form-select__option">Server 3</div>
+                                    <div class="form-select__option">Server 4</div>
+                                    <div class="form-select__option">Server 5</div>
+                                    <div class="form-select__option">Server 6</div>
+                                </div>
+                            </div>
+                        </div>
 
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="200" id="">
-                            <span>200</span>
-                        </label>
-
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="300" id="">
-                            <span>300</span>
-                        </label>
-
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="400" id="">
-                            <span>400</span>
-                        </label>
-
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="500" id="">
-                            <span>500</span>
-                        </label>
-
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="600" id="">
-                            <span>600</span>
-                        </label>
-
-                        <label class="steam-login__form_radio">
-                            <input type="radio" name="steamValue" value="700" id="">
-                            <span>700</span>
-                        </label>
-
-                    </div>
-                    <div class="steam-login__form_group">
-                        <svg class="steam-login__form_svg" xmlns="http://www.w3.org/2000/svg" width="22" height="23" viewBox="0 0 22 23" fill="none">
-                            <g clip-path="url(#clip0_2449_3069)">
-                                <path d="M11 1.23828C5.06726 1.23828 0.257812 6.04773 0.257812 11.9805C0.257812 17.9132 5.06726 22.7227 11 22.7227C16.9327 22.7227 21.7422 17.9132 21.7422 11.9805C21.7422 6.04773 16.9327 1.23828 11 1.23828ZM14.6649 13.1464L11.033 15.7713C10.9012 17.1897 9.68804 18.2998 8.22662 18.2998C7.58464 18.3003 6.96162 18.0822 6.46005 17.6815C5.95847 17.2808 5.60819 16.7213 5.46683 16.0951L3.55592 15.3358V11.8051L6.78477 13.0963C7.28866 12.7955 7.85469 12.6608 8.51353 12.7186L10.8702 9.37295C10.8857 7.32236 12.5796 5.6611 14.6572 5.6611C16.7464 5.6611 18.4403 7.34165 18.4441 9.39994C18.4441 11.4734 16.7463 13.1464 14.6649 13.1464Z" fill="#847F7D" />
-                                <path d="M8.22593 13.4375C8.07464 13.437 7.92378 13.4538 7.7763 13.4876L8.64071 13.8345C8.84131 13.9125 9.02442 14.0296 9.17942 14.179C9.33443 14.3283 9.45825 14.5069 9.5437 14.7045C9.62915 14.9021 9.67453 15.1146 9.67722 15.3298C9.6799 15.5451 9.63983 15.7587 9.55934 15.9583C9.47776 16.1592 9.35735 16.342 9.20502 16.4963C9.05269 16.6506 8.87142 16.7733 8.67159 16.8575C8.47176 16.9416 8.2573 16.9855 8.04049 16.9866C7.82367 16.9878 7.60876 16.9461 7.40806 16.8641C7.07084 16.733 6.72589 16.5904 6.38867 16.4632C6.55781 16.7903 6.81099 17.0664 7.1222 17.2632C7.4334 17.46 7.79139 17.5704 8.15938 17.5829C8.52737 17.5955 8.89207 17.5099 9.216 17.3349C9.53993 17.1598 9.8114 16.9017 10.0025 16.5869C10.1936 16.2722 10.2975 15.9123 10.3034 15.5441C10.3093 15.176 10.217 14.8129 10.0361 14.4922C9.85523 14.1715 9.59219 13.9047 9.27404 13.7194C8.9559 13.534 8.59413 13.4367 8.22593 13.4375Z" fill="#847F7D" />
-                                <path d="M14.6619 6.89453C13.2548 6.89453 12.1191 8.02005 12.1191 9.40391C12.1191 10.7954 13.2587 11.9133 14.6619 11.9133C16.0534 11.9171 17.197 10.7955 17.193 9.40391C17.193 8.02005 16.0534 6.89453 14.6619 6.89453ZM14.6561 10.9108C14.3587 10.9076 14.0689 10.8165 13.8232 10.649C13.5775 10.4815 13.3868 10.245 13.2752 9.96933C13.1636 9.69368 13.1361 9.39117 13.196 9.09989C13.256 8.80861 13.4008 8.54158 13.6122 8.33243C13.8236 8.12327 14.0922 7.98133 14.3841 7.92448C14.676 7.86764 14.9782 7.89842 15.2526 8.01296C15.5271 8.1275 15.7615 8.32067 15.9264 8.56816C16.0913 8.81565 16.1793 9.10639 16.1793 9.40378C16.1785 9.60284 16.1385 9.7998 16.0615 9.98337C15.9845 10.1669 15.8721 10.3335 15.7305 10.4735C15.589 10.6135 15.4213 10.7242 15.2369 10.7992C15.0525 10.8743 14.8552 10.9122 14.6561 10.9108H14.6561Z" fill="#847F7D" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_2449_3069">
-                                    <rect width="22" height="22" fill="white" transform="translate(0 0.980469)" />
-                                </clipPath>
-                            </defs>
-                        </svg>
-                        <input class="steam-login__form_input" placeholder="У вас есть промокод?">
-                        <button class="steam-login__form_btn">Подтвердить</button>
+                        <div class="mobile-game-form__checkbox basket-page__price_contract">
+                            <a class="contract-offer" href="#">
+                                <span class="contract-offer__text">Я указал верный </span>
+                                <span class="contract-offer__link">ID</span>
+                            </a>
+                            <label class="contract-offer__switch">
+                                <input class="contract-offer__input" type="checkbox" required>
+                                <span class="contract-offer__slider"></span>
+                            </label>
+                        </div>
                     </div>
                 </div>
+
                 <div class="steam-login__info">
+                    <div class="form-group">
+                        <input class="form-input" placeholder="У вас есть промокод?">
+                        <button class="form-input__btn">Подтвердить</button>
+                    </div>
                     <div class="steam-login__pay">
                         <div class="steam-login__pay_bonus">
                             <div class="steam-login__pay_bonus_main">
@@ -181,10 +161,6 @@ title: Пополнение стим
                                 </svg>
                             </div>
                             <div class="steam-login__pay_bonus_sub">на ваш счет</div>
-                        </div>
-                        <div class="steam-login__pay_add">
-                            <span>+200</span>
-                            <img class="steam-login__pay_add_crystal" src="assets/images/steam/bonus-crystal.svg" alt="">
                         </div>
                         <div class="steam-login__pay_card">
                             <img class="steam-login__pay_card_img" src="assets/images/steam/login-pay.png" alt="">
@@ -207,7 +183,7 @@ title: Пополнение стим
                     <div class="steam-login__price">
                         <div class="steam-login__price_pay">
                             <div class="steam-login__price_sub">Сумма оплаты</div>
-                            <div class="steam-login__price_pay_num">2726₽</div>
+                            <div class="steam-login__price_pay_num">501₽</div>
                         </div>
                         <div class="steam-login__price_svg">
                             <svg xmlns="http://www.w3.org/2000/svg" width="52" height="8" viewBox="0 0 52 8" fill="none">
@@ -215,12 +191,16 @@ title: Пополнение стим
                             </svg>
                         </div>
                         <div class="steam-login__price_get">
-                            <div class="steam-login__price_sub">Сумма оплаты</div>
+                            <div class="steam-login__price_sub">Вы получаете</div>
                             <div class="steam-login__price_get_block">
-                                <div class="steam-login__price_get_num">2000₽</div>
-                                <div class="steam-login__price_get_bonus">
-                                    <span>+200</span>
-                                    <img class="steam-login__pay_add_crystal" src="assets/images/steam/bonus-crystal.svg" alt="">
+                                <div class="steam-login__price_get_wrap">
+                                    <div class="steam-login__price_get_num">300UC</div>
+                                    <div class="steam-login__price_get_bonus">
+                                        <span>+25</span>
+                                    </div>
+                                </div>
+                                <div class="steam-login__price_get_icon">
+                                    
                                 </div>
                             </div>
                         </div>
