--- a/src/steam.html
+++ b/src/steam.html
@@ -397,10 +397,12 @@ title: Пополнение стим
                         <div class="steam-login__price_get">
                             <div class="steam-login__price_sub">Вы получаете</div>
                             <div class="steam-login__price_get_block">
-                                <div class="steam-login__price_get_num">2000₽</div>
-                                <div class="steam-login__price_get_bonus">
-                                    <span>+200</span>
-                                    <img class="steam-login__pay_add_crystal" src="assets/images/steam/bonus-crystal.svg" alt="">
+                                <div class="steam-login__price_get_wrap">
+                                    <div class="steam-login__price_get_num">2000₽</div>
+                                    <div class="steam-login__price_get_bonus">
+                                        <span>+200</span>
+                                        <img class="steam-login__pay_add_crystal" src="assets/images/steam/bonus-crystal.svg" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
