--- a/src/mobile-game-buy.html
+++ b/src/mobile-game-buy.html
@@ -87,7 +87,7 @@ title: Пополнение стим
 
     <section class="mobile-game-form">
         <div class="container">
-            <form class="mobile-game-form__block">
+            <form class="mobile-game-form__block" action="#" method="post">
                 <div class="mobile-game-form__form">
 
                     <div class="mobile-game-form__frame">
@@ -498,76 +498,82 @@ title: Пополнение стим
 
                 <div class="mobile-game-form__info">
                     <div class="steam-login__info">
-                        <div class="steam-login__info_name">
-                            <span class="steam-login__info_name_text">PUBG: Mobile</span>
-                            <span class="steam-login__info_name_region">
-                                <img src="assets/images/flags/russia.svg" alt="">
-                            </span>
-                        </div>
-                        <div class="steam-login__info_item">
-                            <div class="steam-login__info_item_count">300 UC + 25</div>
-                            <img class="steam-login__info_item_img" src="assets/images/mobile-game/pubg-item.png" alt="">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-input" placeholder="У вас есть промокод?">
-                            <button class="form-input__btn">Подтвердить</button>
-                        </div>
-                        <div class="steam-login__pay">
-                            <div class="steam-login__pay_bonus">
-                                <div class="steam-login__pay_bonus_main">
-                                    <span>+50</span>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
-                                        <path d="M12.1623 9.37883C11.7561 10.3493 11.0341 11.1541 10.1131 11.6627C9.19224 12.1713 8.12652 12.3539 7.08883 12.1809C6.05113 12.0078 5.10231 11.4893 4.39625 10.7094C3.69019 9.92955 3.26829 8.93401 3.19897 7.88428C3.12965 6.83454 3.41699 5.79217 4.01437 4.92621C4.61175 4.06026 5.48415 3.4215 6.49008 3.11352C7.49602 2.80555 8.57649 2.84643 9.55628 3.22952C10.5361 3.61262 11.3577 4.31547 11.888 5.22409L7.85652 7.57673L12.1623 9.37883Z" fill="#FFFEFC" />
-                                        <path d="M14.2993 4.51525C13.5292 2.89584 12.1847 1.62044 10.527 0.936737C8.86922 0.253029 7.01654 0.209811 5.32872 0.815478C3.64089 1.42114 2.23839 2.63246 1.39359 4.2142C0.548784 5.79593 0.321969 7.63519 0.757193 9.37477C1.19242 11.1144 2.25861 12.6301 3.74873 13.6277C5.23885 14.6253 7.04652 15.0334 8.82071 14.7729C10.5949 14.5125 12.209 13.6019 13.3494 12.2181C14.4899 10.8343 15.0754 8.9989 14.9922 7.20763H13.542C13.2198 7.20763 10.1369 7.20763 10.1369 7.20763C10.1369 7.20763 13.0926 8.6405 13.4061 8.79247C13.2085 9.70965 12.8084 10.5918 12.2291 11.2947C11.3176 12.4006 10.0277 13.1283 8.6098 13.3365C7.19192 13.5447 5.74727 13.2185 4.5564 12.4212C3.36554 11.624 2.51346 10.4126 2.16564 9.0224C1.81782 7.63216 1.99908 6.16228 2.67423 4.89819C3.34938 3.63411 4.47022 2.66605 5.81909 2.18201C7.16796 1.69798 8.64858 1.73252 9.97341 2.27892C11.2982 2.82532 12.4089 3.93781 13.0244 5.232L14.2993 4.51525Z" fill="#FFFEFC" />
-                                    </svg>
-                                </div>
-                                <div class="steam-login__pay_bonus_sub">на ваш счет</div>
+                        <div class="steam-login__info_1">
+                            <div class="steam-login__info_name">
+                                <span class="steam-login__info_name_text">PUBG: Mobile</span>
+                                <span class="steam-login__info_name_region">
+                                    <img src="assets/images/flags/russia.svg" alt="">
+                                </span>
                             </div>
-                            <div class="steam-login__pay_card">
-                                <img class="steam-login__pay_card_img" src="assets/images/steam/login-pay.png" alt="">
-                                <div class="steam-login__pay_card_content">
-                                    <div class="steam-login__pay_card_price">
-                                        <span>2512</span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19" fill="none">
-                                            <path d="M14.4673 12.1699C13.9617 13.378 13.0628 14.3799 11.9163 15.013C10.7699 15.6462 9.44318 15.8735 8.15135 15.6581C6.85953 15.4427 5.67835 14.7972 4.79938 13.8263C3.9204 12.8555 3.39518 11.6161 3.30888 10.3093C3.22259 9.00249 3.58029 7.70484 4.32397 6.62681C5.06765 5.54878 6.1537 4.75359 7.40598 4.3702C8.65827 3.9868 10.0033 4.03769 11.2231 4.51461C12.4428 4.99152 13.4657 5.8665 14.1258 6.99764L9.10706 9.92643L14.4673 12.1699Z" fill="#FFFEFC" />
-                                            <path d="M17.1277 6.11521C16.169 4.09921 14.4952 2.51147 12.4315 1.66032C10.3678 0.809175 8.06137 0.755374 5.9602 1.50937C3.85903 2.26336 2.11306 3.77133 1.06137 5.74043C0.00967102 7.70953 -0.27269 9.99921 0.269119 12.1648C0.810928 14.3304 2.13824 16.2174 3.99328 17.4593C5.84832 18.7011 8.09869 19.2093 10.3074 18.885C12.516 18.5607 14.5254 17.4272 15.9452 15.7045C17.365 13.9818 18.0939 11.6969 17.9903 9.46694H16.1848C15.7838 9.46694 11.9459 9.46694 11.9459 9.46694C11.9459 9.46694 15.6255 11.2507 16.0158 11.4399C15.7697 12.5817 15.2716 13.6799 14.5504 14.555C13.4158 15.9317 11.8099 16.8376 10.0448 17.0967C8.2797 17.3559 6.48125 16.9498 4.99875 15.9573C3.51624 14.9649 2.45549 13.4568 2.02249 11.7261C1.58949 9.99544 1.81515 8.16558 2.65564 6.59193C3.49613 5.01827 4.89146 3.81314 6.57067 3.21057C8.24987 2.60799 10.0931 2.65099 11.7424 3.33121C13.3916 4.01142 14.7743 5.39635 15.5405 7.00749L17.1277 6.11521Z" fill="#FFFEFC" />
+                            <div class="steam-login__info_item">
+                                <div class="steam-login__info_item_count">300 UC + 25</div>
+                                <img class="steam-login__info_item_img" src="assets/images/mobile-game/pubg-item.png" alt="">
+                            </div>
+                            <div class="form-group">
+                                <input class="form-input" placeholder="У вас есть промокод?">
+                                <button class="form-input__btn">Подтвердить</button>
+                            </div>
+                            <div class="steam-login__pay">
+                                <div class="steam-login__pay_bonus">
+                                    <div class="steam-login__pay_bonus_main">
+                                        <span>+50</span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none">
+                                            <path d="M12.1623 9.37883C11.7561 10.3493 11.0341 11.1541 10.1131 11.6627C9.19224 12.1713 8.12652 12.3539 7.08883 12.1809C6.05113 12.0078 5.10231 11.4893 4.39625 10.7094C3.69019 9.92955 3.26829 8.93401 3.19897 7.88428C3.12965 6.83454 3.41699 5.79217 4.01437 4.92621C4.61175 4.06026 5.48415 3.4215 6.49008 3.11352C7.49602 2.80555 8.57649 2.84643 9.55628 3.22952C10.5361 3.61262 11.3577 4.31547 11.888 5.22409L7.85652 7.57673L12.1623 9.37883Z" fill="#FFFEFC" />
+                                            <path d="M14.2993 4.51525C13.5292 2.89584 12.1847 1.62044 10.527 0.936737C8.86922 0.253029 7.01654 0.209811 5.32872 0.815478C3.64089 1.42114 2.23839 2.63246 1.39359 4.2142C0.548784 5.79593 0.321969 7.63519 0.757193 9.37477C1.19242 11.1144 2.25861 12.6301 3.74873 13.6277C5.23885 14.6253 7.04652 15.0334 8.82071 14.7729C10.5949 14.5125 12.209 13.6019 13.3494 12.2181C14.4899 10.8343 15.0754 8.9989 14.9922 7.20763H13.542C13.2198 7.20763 10.1369 7.20763 10.1369 7.20763C10.1369 7.20763 13.0926 8.6405 13.4061 8.79247C13.2085 9.70965 12.8084 10.5918 12.2291 11.2947C11.3176 12.4006 10.0277 13.1283 8.6098 13.3365C7.19192 13.5447 5.74727 13.2185 4.5564 12.4212C3.36554 11.624 2.51346 10.4126 2.16564 9.0224C1.81782 7.63216 1.99908 6.16228 2.67423 4.89819C3.34938 3.63411 4.47022 2.66605 5.81909 2.18201C7.16796 1.69798 8.64858 1.73252 9.97341 2.27892C11.2982 2.82532 12.4089 3.93781 13.0244 5.232L14.2993 4.51525Z" fill="#FFFEFC" />
                                         </svg>
                                     </div>
-                                    <div class="steam-login__pay_card_subprice">
-                                        Вместо 2726₽
-                                    </div>
+                                    <div class="steam-login__pay_bonus_sub">на ваш счет</div>
                                 </div>
-                            </div>
-                            <button class="steam-login__pay_btn">Оплатить</button>
-                        </div>
-                        <div class="steam-login__info_subtitle">Или оплатите другим способом</div>
-                        <div class="steam-login__price">
-                            <div class="steam-login__price_pay">
-                                <div class="steam-login__price_sub">Сумма оплаты</div>
-                                <div class="steam-login__price_pay_num">501₽</div>
-                            </div>
-                            <div class="steam-login__price_svg">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="52" height="8" viewBox="0 0 52 8" fill="none">
-                                    <path d="M51.3536 4.33403C51.5488 4.13876 51.5488 3.82218 51.3536 3.62692L48.1716 0.444939C47.9763 0.249677 47.6597 0.249677 47.4645 0.444939C47.2692 0.640201 47.2692 0.956784 47.4645 1.15205L50.2929 3.98047L47.4645 6.8089C47.2692 7.00416 47.2692 7.32074 47.4645 7.51601C47.6597 7.71127 47.9763 7.71127 48.1716 7.51601L51.3536 4.33403ZM-4.37114e-08 4.48047L51 4.48047L51 3.48047L4.37114e-08 3.48047L-4.37114e-08 4.48047Z" fill="white" />
-                                </svg>
-                            </div>
-                            <div class="steam-login__price_get">
-                                <div class="steam-login__price_sub">Вы получаете</div>
-                                <div class="steam-login__price_get_block">
-                                    <div class="steam-login__price_get_wrap">
-                                        <div class="steam-login__price_get_num">300UC</div>
-                                        <div class="steam-login__price_get_bonus">
-                                            <span>+25</span>
+                                <div class="steam-login__pay_card">
+                                    <img class="steam-login__pay_card_img" src="assets/images/steam/login-pay.png" alt="">
+                                    <div class="steam-login__pay_card_content">
+                                        <div class="steam-login__pay_card_price">
+                                            <span>2512</span>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19" fill="none">
+                                                <path d="M14.4673 12.1699C13.9617 13.378 13.0628 14.3799 11.9163 15.013C10.7699 15.6462 9.44318 15.8735 8.15135 15.6581C6.85953 15.4427 5.67835 14.7972 4.79938 13.8263C3.9204 12.8555 3.39518 11.6161 3.30888 10.3093C3.22259 9.00249 3.58029 7.70484 4.32397 6.62681C5.06765 5.54878 6.1537 4.75359 7.40598 4.3702C8.65827 3.9868 10.0033 4.03769 11.2231 4.51461C12.4428 4.99152 13.4657 5.8665 14.1258 6.99764L9.10706 9.92643L14.4673 12.1699Z" fill="#FFFEFC" />
+                                                <path d="M17.1277 6.11521C16.169 4.09921 14.4952 2.51147 12.4315 1.66032C10.3678 0.809175 8.06137 0.755374 5.9602 1.50937C3.85903 2.26336 2.11306 3.77133 1.06137 5.74043C0.00967102 7.70953 -0.27269 9.99921 0.269119 12.1648C0.810928 14.3304 2.13824 16.2174 3.99328 17.4593C5.84832 18.7011 8.09869 19.2093 10.3074 18.885C12.516 18.5607 14.5254 17.4272 15.9452 15.7045C17.365 13.9818 18.0939 11.6969 17.9903 9.46694H16.1848C15.7838 9.46694 11.9459 9.46694 11.9459 9.46694C11.9459 9.46694 15.6255 11.2507 16.0158 11.4399C15.7697 12.5817 15.2716 13.6799 14.5504 14.555C13.4158 15.9317 11.8099 16.8376 10.0448 17.0967C8.2797 17.3559 6.48125 16.9498 4.99875 15.9573C3.51624 14.9649 2.45549 13.4568 2.02249 11.7261C1.58949 9.99544 1.81515 8.16558 2.65564 6.59193C3.49613 5.01827 4.89146 3.81314 6.57067 3.21057C8.24987 2.60799 10.0931 2.65099 11.7424 3.33121C13.3916 4.01142 14.7743 5.39635 15.5405 7.00749L17.1277 6.11521Z" fill="#FFFEFC" />
+                                            </svg>
+                                        </div>
+                                        <div class="steam-login__pay_card_subprice">
+                                            Вместо 2726₽
                                         </div>
                                     </div>
-                                    <div class="steam-login__price_get_icon">
-                                        <img src="assets/images/mobile-game/pubg-item.png" alt="">
+                                </div>
+                                <button class="steam-login__pay_btn">Оплатить</button>
+                            </div>
+                        </div>
+
+                        <div class="steam-login__info_2">
+                            <div class="steam-login__info_subtitle">Или оплатите другим способом</div>
+                            <div class="steam-login__price">
+                                <div class="steam-login__price_pay">
+                                    <div class="steam-login__price_sub">Сумма оплаты</div>
+                                    <div class="steam-login__price_pay_num">501₽</div>
+                                </div>
+                                <div class="steam-login__price_svg">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="52" height="8" viewBox="0 0 52 8" fill="none">
+                                        <path d="M51.3536 4.33403C51.5488 4.13876 51.5488 3.82218 51.3536 3.62692L48.1716 0.444939C47.9763 0.249677 47.6597 0.249677 47.4645 0.444939C47.2692 0.640201 47.2692 0.956784 47.4645 1.15205L50.2929 3.98047L47.4645 6.8089C47.2692 7.00416 47.2692 7.32074 47.4645 7.51601C47.6597 7.71127 47.9763 7.71127 48.1716 7.51601L51.3536 4.33403ZM-4.37114e-08 4.48047L51 4.48047L51 3.48047L4.37114e-08 3.48047L-4.37114e-08 4.48047Z" fill="white" />
+                                    </svg>
+                                </div>
+                                <div class="steam-login__price_get">
+                                    <div class="steam-login__price_sub">Вы получаете</div>
+                                    <div class="steam-login__price_get_block">
+                                        <div class="steam-login__price_get_wrap">
+                                            <div class="steam-login__price_get_num">300UC</div>
+                                            <div class="steam-login__price_get_bonus">
+                                                <span>+25</span>
+                                            </div>
+                                        </div>
+                                        <div class="steam-login__price_get_icon">
+                                            <img src="assets/images/mobile-game/pubg-item.png" alt="">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <button class="steam-login__pay_btn steam-login__pay_btn_main">Пополнить</button>
+                            <div class="steam-login__info_subtitle_2">Нажимая “Оплатить”, вы подтверждаете, что указали верный СВОЙ ID в PUBG mobile</div>
                         </div>
-                        <button class="steam-login__pay_btn steam-login__pay_btn_main">Пополнить</button>
-                        <div class="steam-login__info_subtitle_2">Нажимая “Оплатить”, вы подтверждаете, что указали верный СВОЙ ID в PUBG mobile</div>
+
                     </div>
                 </div>
             </form>
