--- a/src/about.html
+++ b/src/about.html
@@ -76,4 +76,78 @@ title: О нас
             </div>
         </div>
     </section>
+    <section class="about-steps">
+        <div class="container">
+            <div class="about-steps__block">
+                <div class="about-steps__title">3 <span class="_orange">простых</span> шага</div>
+                <div class="about-steps__text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
+                <div class="about-steps__cards">
+                    <div class="about-steps__card">
+                        <div class="about-steps__card_block">
+                            <div class="about-steps__card_title">
+                                <div class="about-steps__card_title_icon">
+                                    <img src="assets/images/about/card-icon.svg" alt="">
+                                </div>
+                                <div class="about-steps__card_title_text">Выбираете</div>
+                                <div class="about-steps__card_title_arrow">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="10" viewBox="0 0 23 10" fill="none">
+                                        <path d="M0.855469 4.28826C0.54221 4.28826 0.288264 4.54221 0.288264 4.85547C0.288264 5.16873 0.54221 5.42267 0.855469 5.42267V4.28826ZM22.8103 5.25654C23.0318 5.03504 23.0318 4.6759 22.8103 4.45439L19.2006 0.844728C18.9791 0.623222 18.62 0.623222 18.3985 0.844728C18.177 1.06624 18.177 1.42537 18.3985 1.64688L21.6071 4.85547L18.3985 8.06406C18.177 8.28557 18.177 8.6447 18.3985 8.86621C18.62 9.08772 18.9791 9.08772 19.2006 8.86621L22.8103 5.25654ZM0.855469 5.42267H22.4092V4.28826H0.855469V5.42267Z" fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="about-steps__card_content">
+                                <div class="about-steps__card_text">Progressive sportiness extends in the form of a line flowing from the striking front section with a deep-faced</div>
+                                <div class="about-steps__card_img">
+                                    <img src="assets/images/about/card-img.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about-steps__card _top">
+                        <div class="about-steps__card_block">
+                            <div class="about-steps__card_title">
+                                <div class="about-steps__card_title_icon">
+                                    <img src="assets/images/about/card-icon.svg" alt="">
+                                </div>
+                                <div class="about-steps__card_title_text">Выбираете</div>
+                                <div class="about-steps__card_title_arrow">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="10" viewBox="0 0 23 10" fill="none">
+                                        <path d="M0.855469 4.28826C0.54221 4.28826 0.288264 4.54221 0.288264 4.85547C0.288264 5.16873 0.54221 5.42267 0.855469 5.42267V4.28826ZM22.8103 5.25654C23.0318 5.03504 23.0318 4.6759 22.8103 4.45439L19.2006 0.844728C18.9791 0.623222 18.62 0.623222 18.3985 0.844728C18.177 1.06624 18.177 1.42537 18.3985 1.64688L21.6071 4.85547L18.3985 8.06406C18.177 8.28557 18.177 8.6447 18.3985 8.86621C18.62 9.08772 18.9791 9.08772 19.2006 8.86621L22.8103 5.25654ZM0.855469 5.42267H22.4092V4.28826H0.855469V5.42267Z" fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="about-steps__card_content">
+                                <div class="about-steps__card_text">Progressive sportiness extends in the form of a line flowing from the striking front section with a deep-faced</div>
+                                <div class="about-steps__card_img">
+                                    <img src="assets/images/about/card-img.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about-steps__card">
+                        <div class="about-steps__card_block">
+                            <div class="about-steps__card_title">
+                                <div class="about-steps__card_title_icon">
+                                    <img src="assets/images/about/card-icon.svg" alt="">
+                                </div>
+                                <div class="about-steps__card_title_text">Выбираете</div>
+                                <div class="about-steps__card_title_arrow">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="23" height="10" viewBox="0 0 23 10" fill="none">
+                                        <path d="M0.855469 4.28826C0.54221 4.28826 0.288264 4.54221 0.288264 4.85547C0.288264 5.16873 0.54221 5.42267 0.855469 5.42267V4.28826ZM22.8103 5.25654C23.0318 5.03504 23.0318 4.6759 22.8103 4.45439L19.2006 0.844728C18.9791 0.623222 18.62 0.623222 18.3985 0.844728C18.177 1.06624 18.177 1.42537 18.3985 1.64688L21.6071 4.85547L18.3985 8.06406C18.177 8.28557 18.177 8.6447 18.3985 8.86621C18.62 9.08772 18.9791 9.08772 19.2006 8.86621L22.8103 5.25654ZM0.855469 5.42267H22.4092V4.28826H0.855469V5.42267Z" fill="white" />
+                                    </svg>
+                                </div>
+                            </div>
+                            <div class="about-steps__card_content">
+                                <div class="about-steps__card_text">Progressive sportiness extends in the form of a line flowing from the striking front section with a deep-faced</div>
+                                <div class="about-steps__card_img">
+                                    <img src="assets/images/about/card-img.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 </main>
