--- a/src/about.html
+++ b/src/about.html
@@ -78,7 +78,7 @@ title: О нас
     </section>
     <section class="about-steps">
         <div class="container">
-            <div class="about-steps__block">
+            <div class="about-page__block">
                 <div class="about-page__title">3 <span class="_orange">простых</span> шага</div>
                 <div class="about-page__text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
                 <div class="about-steps__cards">
@@ -151,7 +151,7 @@ title: О нас
     </section>
     <section class="about-why">
         <div class="container">
-            <div class="about-why__block">
+            <div class="about-page__block">
                 <div class="about-page__title">Почему <span class="_orange">именно</span> мы?</div>
                 <div class="about-page__text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
             </div>
@@ -270,6 +270,52 @@ title: О нас
                     </div>
                     <div class="about-why__card_title">Бонусы и трофеии</div>
                     <div class="about-why__card_text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis.</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="about-services">
+        <div class="container">
+            <div class="about-page__block">
+                <div class="about-page__title">Наши <span class="_orange">топовые</span> сервисы</div>
+                <div class="about-page__text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
+            </div>
+            <div class="about-services__block">
+                <div class="about-services__card">
+                    <div class="about-services__card_img">
+                        <img src="assets/images/about/service-1.png" alt="">
+                    </div>
+                    <div class="about-services__card_content">
+                        <div class="about-services__card_title">Каталог новинок и огромыне скидки</div>
+                        <div class="about-services__card_text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
+                        <div class="about-services__card_btn">
+                            <a href="catalog.html" class="about-header__btn btn-orange">В каталог</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-services__card _reverse">
+                    <div class="about-services__card_img">
+                        <img src="assets/images/about/service-2.png" alt="">
+                    </div>
+                    <div class="about-services__card_content">
+                        <div class="about-services__card_title">Пополнение Вашего Steam аккаунта</div>
+                        <div class="about-services__card_text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
+                        <div class="about-services__card_btn">
+                            <a href="catalog.html" class="about-header__btn btn-blue">Пополнить</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-services__card">
+                    <div class="about-services__card_img">
+                        <img src="assets/images/about/service-3.png" alt="">
+                    </div>
+                    <div class="about-services__card_content">
+                        <div class="about-services__card_title">Пополнение ваших мобильных игр</div>
+                        <div class="about-services__card_text">Lorem ipsum dolor sit amet consectetur. Volutpat nisi neque leo et quis. Libero montes vitae egestas ante in. Convallis habitasse posuere adipiscing orci.</div>
+                        <div class="about-services__card_btn">
+                            <a href="catalog.html" class="about-header__btn btn-yellow">В каталог</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
