--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,6 @@ title: О нас
                     <img class="about-header__img_main" src="assets/images/about/poster-main.png" alt="">
                     <img class="about-header__img_1 about-header__img_item" src="assets/images/about/poster-1.png" alt="">
                     <img class="about-header__img_2 about-header__img_item" src="assets/images/about/poster-2.png" alt="">
-                    <img class="about-header__img_4 about-header__img_item" src="assets/images/about/poster-4.png" alt="">
                 </div>
                 <div class="about-header__slider-1 about-header__slider">
                     <span>О нас</span>
@@ -38,6 +37,7 @@ title: О нас
             </div>
             <div class="about-header__content">
                 <img class="about-header__img_3 about-header__img_item" src="assets/images/about/poster-3.png" alt="">
+                <img class="about-header__img_4 about-header__img_item" src="assets/images/about/poster-4.png" alt="">
                 <div class="about-header__logo">
                     <svg xmlns="http://www.w3.org/2000/svg" width="79" height="79" viewBox="0 0 79 79" fill="none">
                         <path d="M62.7914 48.5583C60.5971 53.8012 56.6961 58.149 51.7209 60.8967C46.7457 63.6445 40.9882 64.6309 35.3821 63.6962C29.776 62.7614 24.6501 59.9602 20.8356 55.7469C17.0211 51.5336 14.7418 46.1552 14.3673 40.4841C13.9928 34.8129 15.5451 29.1815 18.7725 24.5032C21.9998 19.8249 26.7129 16.374 32.1474 14.7102C37.582 13.0464 43.4192 13.2672 48.7124 15.3369C54.0057 17.4066 58.4446 21.2037 61.3092 26.1125L39.5296 38.8225L62.7914 48.5583Z" fill="#FF7347" />
@@ -286,7 +286,7 @@ title: О нас
             <div class="about-services__block">
                 <div class="about-services__card">
                     <div class="about-services__card_img">
-                        <img src="assets/images/about/service-1.png" alt="">
+                        <img class="_img-1" src="assets/images/about/service-1.png" alt="">
                     </div>
                     <div class="about-services__card_content">
                         <div class="about-services__card_title">Каталог новинок и огромыне скидки</div>
@@ -298,7 +298,7 @@ title: О нас
                 </div>
                 <div class="about-services__card _reverse">
                     <div class="about-services__card_img">
-                        <img src="assets/images/about/service-2.png" alt="">
+                        <img class="_img-2" src="assets/images/about/service-2.png" alt="">
                     </div>
                     <div class="about-services__card_content">
                         <div class="about-services__card_title">Пополнение Вашего Steam аккаунта</div>
@@ -310,7 +310,7 @@ title: О нас
                 </div>
                 <div class="about-services__card">
                     <div class="about-services__card_img">
-                        <img src="assets/images/about/service-3.png" alt="">
+                        <img class="_img-3" src="assets/images/about/service-3.png" alt="">
                     </div>
                     <div class="about-services__card_content">
                         <div class="about-services__card_title">Пополнение ваших мобильных игр</div>
@@ -549,9 +549,9 @@ title: О нас
     </section>
     <section class="about-others">
         <div class="container">
-            <div class="home-loop-block__title">
+            <a href="#" class="home-loop-block__title">
                 <span class="home-loop-block__title_bg">Читать все отзывы</span>
-            </div>
+            </a>
             <div class="home-loop-block__border_top"></div>
         </div>
 
