--- a/src/index.html
+++ b/src/index.html
@@ -1258,60 +1258,58 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid home-statics home-loop-block">
-        <div class="container">
-
-            <div class="home-loop-block__title">
-                <span class="home-loop-block__title_bg">Наша статистика</span>
-            </div>
-
-            <div class="splide">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide">
-                            <div class="statics-card">
-                                <img src="assets/images/home/statics-1.png" class="statics-card__img">
-                                <div class="statics-card__content">
-                                    <div class="statics-card__number">789 462 ₽</div>
-                                    <div class="statics-card__text">Партнеры заработали</div>
+    <section class="container-fluid home-statics">
+        <div class="home-loop-block__title">
+            <span class="home-loop-block__title_bg">Наша статистика</span>
+        </div>
+        <div class="home-loop-block">
+            <div class="container">
+                <div class="splide">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div class="statics-card">
+                                    <img src="assets/images/home/statics-1.png" class="statics-card__img">
+                                    <div class="statics-card__content">
+                                        <div class="statics-card__number">789 462 ₽</div>
+                                        <div class="statics-card__text">Партнеры заработали</div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="statics-card">
-                                <img src="assets/images/home/statics-1.png" class="statics-card__img">
-                                <div class="statics-card__content">
-                                    <div class="statics-card__number">789 462 ₽</div>
-                                    <div class="statics-card__text">Партнеры заработали</div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="statics-card">
+                                    <img src="assets/images/home/statics-1.png" class="statics-card__img">
+                                    <div class="statics-card__content">
+                                        <div class="statics-card__number">789 462 ₽</div>
+                                        <div class="statics-card__text">Партнеры заработали</div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="statics-card">
-                                <img src="assets/images/home/statics-1.png" class="statics-card__img">
-                                <div class="statics-card__content">
-                                    <div class="statics-card__number">789 462 ₽</div>
-                                    <div class="statics-card__text">Партнеры заработали</div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="statics-card">
+                                    <img src="assets/images/home/statics-1.png" class="statics-card__img">
+                                    <div class="statics-card__content">
+                                        <div class="statics-card__number">789 462 ₽</div>
+                                        <div class="statics-card__text">Партнеры заработали</div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="statics-card">
-                                <img src="assets/images/home/statics-1.png" class="statics-card__img">
-                                <div class="statics-card__content">
-                                    <div class="statics-card__number">789 462 ₽</div>
-                                    <div class="statics-card__text">Партнеры заработали</div>
+                            </li>
+                            <li class="splide__slide">
+                                <div class="statics-card">
+                                    <img src="assets/images/home/statics-1.png" class="statics-card__img">
+                                    <div class="statics-card__content">
+                                        <div class="statics-card__number">789 462 ₽</div>
+                                        <div class="statics-card__text">Партнеры заработали</div>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-            <div class="home-loop-block__border_bottom"></div>
-            <div class="home-loop-block__border_top"></div>
         </div>
-
+        <div class="home-loop-block__border_bottom"></div>
+        <div class="home-loop-block__border_top"></div>
         <div class="home-loop-block__bg_block">
             <div class="home-loop-block__bg"></div>
         </div>
@@ -1403,77 +1401,78 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid home-markets home-loop-block">
-        <div class="container">
-            <div class="home-loop-block__title">
-                <span class="home-loop-block__title_bg">Мы на других ресурсах</span>
-            </div>
-            <div class="splide">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+    <section class="container-fluid home-markets">
+        <div class="home-loop-block__title">
+            <span class="home-loop-block__title_bg">Мы на других ресурсах</span>
+        </div>
+        <div class="home-loop-block">
+            <div class="container">
+                <div class="splide">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/yandex.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/avito.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/avito.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/g2a.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/g2a.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/kinguin.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/kinguin.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/wildb.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/wildb.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/ozon.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/ozon.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/gamivo.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/gamivo.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="splide__slide">
-                            <div class="home-markets__slide">
-                                <div class="home-markets__img">
-                                    <img class="home-markets__img_item" src="assets/images/home/gameflip.svg" alt="">
+                            </li>
+                            <li class="splide__slide">
+                                <div class="home-markets__slide">
+                                    <div class="home-markets__img">
+                                        <img class="home-markets__img_item" src="assets/images/home/gameflip.svg" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="home-loop-block__border_bottom"></div>
-            <div class="home-loop-block__border_top"></div>
-
         </div>
+        <div class="home-loop-block__border_bottom"></div>
+        <div class="home-loop-block__border_top"></div>
         <div class="home-loop-block__bg_block">
             <div class="home-loop-block__bg"></div>
         </div>
@@ -1594,49 +1593,48 @@ title: Главная страница
         </div>
     </section>
 
-    <section class="container-fluid home-blog home-loop-block">
-        <div class="container">
-            <div class="home-loop-block__title">
-                <span class="home-loop-block__title_bg">
-                    <div class="home-blog__title_main"><span class="_orange">BIS</span> BLOG</div>
-                    <div class="home-blog__title_secondary">Мы знаем что говорить о играх</div>
-                </span>
-            </div>
-
-            <div class="splide">
-                <div class="splide__track">
-                    <ul class="splide__list">
-                        <li class="splide__slide">
-                            <div class="home-blog-card">
-                                <img src="assets/images/home/blog.png" class="home-blog-card__img_bg" alt="">
-                                <div class="home-blog-card__block">
-                                    <img src="assets/images/home/blog.png" class="home-blog-card__img">
-                                    <div class="home-blog-card__content">
-                                        <div class="home-blog-card__date">
-                                            <span>17:24 16.02.2024</span>
-                                            <span class="home-blog-card__date_label">BISPoet</span>
-                                        </div>
-                                        <div class="home-blog-card__title">HALO: Путешествие в глубины Вселенной</div>
-                                        <div class="home-blog-card__text">Игра HALO - это не просто игра, это целое путешествие в глубины Вселенной. В этой игре вы переноситесь в далекое будущее, где человечество борется за выживание против ...</div>
-                                        <div class="home-blog-card__action">
-                                            <a href="#" class="home-blog-card__link">Читать блог</a>
-                                            <div class="home-blog-card__timer">
-                                                <img class="home-blog-card__timer_icon" src="assets/images/home/icons/timer.svg" alt="">
-                                                <span>11 минут</span>
+    <section class="container-fluid home-blog">
+        <div class="home-loop-block__title">
+            <span class="home-loop-block__title_bg">
+                <div class="home-blog__title_main"><span class="_orange">BIS</span> BLOG</div>
+                <div class="home-blog__title_secondary">Мы знаем что говорить о играх</div>
+            </span>
+        </div>
+        <div class="home-loop-block">
+            <div class="container">
+                <div class="splide">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <div class="home-blog-card">
+                                    <img src="assets/images/home/blog.png" class="home-blog-card__img_bg" alt="">
+                                    <div class="home-blog-card__block">
+                                        <img src="assets/images/home/blog.png" class="home-blog-card__img">
+                                        <div class="home-blog-card__content">
+                                            <div class="home-blog-card__date">
+                                                <span>17:24 16.02.2024</span>
+                                                <span class="home-blog-card__date_label">BISPoet</span>
+                                            </div>
+                                            <div class="home-blog-card__title">HALO: Путешествие в глубины Вселенной</div>
+                                            <div class="home-blog-card__text">Игра HALO - это не просто игра, это целое путешествие в глубины Вселенной. В этой игре вы переноситесь в далекое будущее, где человечество борется за выживание против ...</div>
+                                            <div class="home-blog-card__action">
+                                                <a href="#" class="home-blog-card__link">Читать блог</a>
+                                                <div class="home-blog-card__timer">
+                                                    <img class="home-blog-card__timer_icon" src="assets/images/home/icons/timer.svg" alt="">
+                                                    <span>11 минут</span>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
 
-                            </div>
-                        </li>
-                    </ul>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-
-            <div class="home-loop-block__border_top"></div>
-
         </div>
+        <div class="home-loop-block__border_top"></div>
     </section>
 
     <section class="container-fluid home-reviews">
