--- a/src/steam-gifts.html
+++ b/src/steam-gifts.html
@@ -151,6 +151,7 @@ title: Главная страница
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-pagination"></div>
                 </div>
                 <div class="swiper steam-gifts-bottom">
                     <div class="swiper-wrapper">
